--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "version": "1.0.0",
-  "description": "My webpack project",
-  "name": "my-webpack-project",
+  "description": "ESN actual",
+  "name": "esn",
+  "home": "https://kleale.github.io/gt2.0_nuxt/",
+  "homepage": "https://kleale.github.io/gt2.0_nuxt/",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
@@ -32,6 +34,7 @@
   "dependencies": {
     "bootstrap": "^4.6.2",
     "bootstrap-select": "^1.13.10",
+    "gh-pages": "^6.1.0",
     "highcharts": "^7.2.2",
     "jquery": "^3.5.1",
     "medium-zoom": "^1.0.6",
